--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
+  <meta name="google-site-verification" content="aNDDVPunCUGZGoiEK8oEIij-GKDCSSzPh_Zk4TerXVI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lim Jongyoon</title>
+  <title>Lim Jongyoon  | HCI Researcher & XR Developer Portfolio</title>
 </head>
 
 <body>
