--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="google-site-verification" content="aNDDVPunCUGZGoiEK8oEIij-GKDCSSzPh_Zk4TerXVI" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lim Jongyoon  | HCI Researcher & XR Developer Portfolio; 임 종윤 HCI 연구원 & XR 개발자 </title>
+  <title>Lim Jongyoon  | HCI Researcher & XR Developer Portfolio; 임 종윤  | HCI 연구원 & XR 개발자 </title>
 </head>
 
 <body>
